# amwal

./: .env  .gitignore  Cargo.toml  README.md  docker-compose.yaml  notes.md
crates/ledger/: .env  Cargo.toml  diesel.toml
crates/ledger-api/: Cargo.toml
crates/ledger-api/src/: lib.rs
crates/ledger/dbml/: main.dbml
crates/ledger/migrations/2026-05-11-053152-0000_accounts_transactions_balances/: down.sql  up.sql
crates/ledger/src/: domain.rs  errors.rs  lib.rs  service.rs  store.rs
crates/ledger/src/postgres/: accounts.rs  journal_entries.rs  mod.rs  models.rs  schema.rs
crates/transfers/: .env  Cargo.toml  diesel.toml
crates/transfers/dbml/: main.dbml
crates/transfers/migrations/2026-05-19-180304-0000_create_transfer_internal_tables/: down.sql  up.sql
crates/transfers/migrations/2026-05-23-000001_add_transition_states_to_transfer_status/: down.sql  up.sql
crates/transfers/src/: lib.rs
crates/transfers/src/postgres/: mod.rs  models.rs  schema.rs
dbml/: main.dbml
docker/: .env  README.md  docker-compose.yaml
docker/postgres-init/: 01_create_databases.sql
migrations/2026-05-11-053152-0000_accounts_transactions_balances_transfers/: down.sql  up.sql
migrations/2026-05-11-053152-0000_create_ledger_accounts/: down.sql  up.sql
migrations/2026-05-11-160257-0000_account_created_at_default_timestamp/: down.sql  up.sql
migrations/2026-05-14-054311-0000_block_accounts_invariant_checks/: up.sql
services/ledger/: Cargo.toml
services/transfers/: Cargo.toml
services/transfers/src/: lib.rs
src/: accounts.rs  errors.rs  journal_entries.rs  lib.rs  models.rs  schema.rs  transactions.rs  transfers.rs
(+13 files in other folders)
