[package]
name = "ledger"
version = "0.1.0"
edition = "2024"

[dependencies]
diesel = { version = "2.2.0", features = ["postgres", "r2d2"] }
diesel-derive-enum = { version = "2.1.0", features = ["postgres"] }
pq-sys = { version = "0.6", features = ["bundled"] }
# openssl-sys = { version = "0.9.100", features = ["vendored"] }
dotenvy = "0.15"
ledger-api = { path = "../ledger-api" }
