[package]
name = "transfers"
version = "0.1.0"
edition = "2024"

[dependencies]
diesel = { version = "2.2.0", features = ["postgres"] }
diesel-derive-enum = { version = "2.1.0", features = ["postgres"] }
pq-sys = { version = "0.6", features = ["bundled"] }
dotenvy = "0.15"
ledger = { path = "../ledger" }